[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/GungaLogo.png" type="Texture" id=1]
[ext_resource path="res://Sounds/GungaNoise.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Splash.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Splash.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "GUNGA"
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GungaLogo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Splash" type="Node2D"]
script = ExtResource( 3 )

[node name="Splash" type="Sprite" parent="."]
position = Vector2( 320, 240 )
texture = ExtResource( 4 )

[node name="GungaLogo" type="Sprite" parent="."]
position = Vector2( 434.874, 107.322 )
scale = Vector2( 0.473663, 0.473663 )
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GUNGA"
anims/GUNGA = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Timer" type="Timer" parent="AudioStreamPlayer2D"]
wait_time = 1.2
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="FadeOut" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="AudioStreamPlayer2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
